# Quantitative-Finance-Lab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  _quarto.yml  index.qmd  overview.qmd  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
book/: _quarto.yml  index.qmd  overview.qmd
book/_book/: index.html  overview.html  search.json
book/_book/notebooks/: 01_yield_curve_bond_pricing_and_risk.html
book/notebooks/: 01_yield_curve_construction.html
config/: README.md
docs/: README.md  index.html  overview.html  search.json
docs/notebooks/: 01_yield_curve_bond_pricing_and_risk.html  02_portfolio_optimization_MV_models.html  03_risk_report_engine_and_CAPM.html
notebooks/: 01_yield_curve_construction.ipynb  02_portfolio_optimization_models.ipynb
quantfinlab/: __init__.py  core.py  fixed_income.py  plots.py  portfolio.py  risk.py
