[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfinlab"
version = "0.0.1"
description = "Quantitative finance lab: notebooks and research workspace"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Quantitative Finance Lab" }
]
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scipy",
  "cvxpy"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
  "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantfinlab*"]

[tool.setuptools.package-data]
quantfinlab = ["py.typed"]


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]
